--- a/Client/index.html
+++ b/Client/index.html
@@ -46,9 +46,10 @@
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular-route.min.js"></script>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-
+<script src="js/ng-map.min.js"></script>
 <!-- Our Website Javascripts -->
 <script src="js/main.js"></script>
+
 
 </body>
 </html>
