--- a/Client/index.html
+++ b/Client/index.html
@@ -36,7 +36,7 @@
 <!-- Our Website Content Goes Here -->
 <div ng-include='"templates/header.html"'></div>
 <div ng-view class="scene"></div>
-<div ng-include='"templates/footer.html"'></div>
+<!--<div ng-include='"templates/footer.html"'></div>-->
 
 <!-- Vendor: Javascripts -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
