--- a/Client/index.html
+++ b/Client/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="css/add.css">
 
 
+
 </head>
 <body ng-app="tutorialWebApp">
 <!--[if lt IE 7]>
@@ -48,6 +49,7 @@
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 <script src="js/ng-map.min.js"></script>
 <!-- Our Website Javascripts -->
+<script src="js/angular-base64-upload/src/angular-base64-upload.js"></script>
 <script src="js/main.js"></script>
 
 
