--- a/Client/index.html
+++ b/Client/index.html
@@ -87,7 +87,18 @@
 <script src="js/ng-map.min.js"></script>
 <!-- Our Website Javascripts -->
 <script src="js/angular-base64-upload/src/angular-base64-upload.js"></script>
-<script src="js/dist/app.min.js"></script>
+<!-- <script src="js/dist/app.min.js"></script> -->
+<script src="js/main.js"></script>
+<script src="js/ctrls/doc.js"></script>
+<script src="js/ctrls/addgroup.js"></script>
+<script src="js/ctrls/event.js"></script>
+<script src="js/ctrls/events.js"></script>
+<script src="js/ctrls/getevent.js"></script>
+<script src="js/ctrls/group.js"></script>
+<script src="js/ctrls/groups.js"></script>
+<script src="js/ctrls/home.js"></script>
+<script src="js/ctrls/profile.js"></script>
+<script src="js/services.js"></script>
 
 <script>
   $(document).ready(function(){
