--- a/Client/index.html
+++ b/Client/index.html
@@ -63,7 +63,7 @@
 						</span>
           </div>
         </form></li>
-        <li><a href="#/doc">Documenti</a></li>
+        <li><a href="#/">Home</a></li>
         <li><a href="#/events">Eventi</a></li>
         <li><a href="#/addevent">+ Evento</a></li>
         <li><a href="#/groups">Gruppi</a></li>
