--- a/Client/index.html
+++ b/Client/index.html
@@ -10,12 +10,13 @@
 <head>
 
     <!-- Meta-Information -->
-    <title>Dashboard | Mergefy</title>
+    <title>{{page.title}} | Mergefy</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="description" content="ACME Inc.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="icon" href="css/image/favicon.ico">
+    <link href="css/image/favicon.ico" rel="icon">
     <!-- Vendor: Bootstrap Stylesheets http://getbootstrap.com -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
@@ -85,8 +86,8 @@
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular-route.min.js"></script>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 <script src="js/ng-map.min.js"></script>
-<!-- Our Website Javascripts -->
 <script src="js/angular-base64-upload/src/angular-base64-upload.js"></script>
+<!-- Our Website Javascripts -->
 <!-- <script src="js/dist/app.min.js"></script> -->
 <script src="js/main.js"></script>
 <script src="js/ctrls/doc.js"></script>
@@ -99,12 +100,6 @@
 <script src="js/ctrls/home.js"></script>
 <script src="js/ctrls/profile.js"></script>
 <script src="js/services.js"></script>
-
-<script>
-  $(document).ready(function(){
-    $('[data-toggle="popover"]').popover();
-  });
-</script>
 
 </body>
 </html>
